--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
+  <app-demo02></app-demo02>
+  <app-demo01></app-demo01>
   <h1>
     Welcome to {{ title }}!
   </h1>
