--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+ul{
+  list-style: none;
+}
+li{
+  text-align: center;
+  border: 2px solid rgb(144, 120, 168);
+  width: 200px;
+  height: 40px;
+  line-height: 40px;
+  margin-top: 20px;
+  border-radius: 5px;
+  background: #dd0331;
+  color: #fff;
+}
+li:hover{
+  box-shadow: 3px 3px 3px  #857276;
+}
+button{
+  text-align: center;
+  border: 2px solid rgb(144, 120, 168);
+  width: 200px;
+  height: 40px;
+  margin-top: 20px;
+  border-radius: 5px;
+  background: #dd0331;
+  color:#fff;
+}
+button:hover{
+    box-shadow: 3px 3px 3px  #888888;
+
+}
